add many bad things